# nwchemc

./: .gitignore  .lychee.toml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  SECURITY.md  cog.toml  meson.build  meson_options.txt  nwchemc.ccsdints.0  nwchemc.cfock  nwchemc.movecs  nwchemc.t2  pixi.toml  prek.toml  towncrier.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
cmake/: nwchemcConfig.cmake.in
docs/: export.el  rgpot-integration.md
docs/newsfragments/: README.md  brillouin-dos-grid-default.fixed.md  brillouin-monkhorst-default.fixed.md  calculate-energy-abi.added.md  calculate-forces-abi.added.md  ccsd-direct-controls.added.md  ccsd-print-controls.added.md  ccsd-rtdb-toggles.added.md  ccsd-switch-arrays.added.md  cmake.added.md  compact-cell-direct.added.md  dipole-abi.added.md  embed-root-validation.fixed.md  embed-task-direct.fixed.md  forceinput-cell-rtdb.added.md  forceinput-gradient-result-abi.added.md  forceinput-state-rtdb.added.md  forceinput-state.added.md  frequency-detail-raw-abi.added.md  frequency-result-energy-unit.fixed.md  hessian-result-abi.added.md  hessian-unit-result.added.md  installed-consumer-invalid-input.added.md  installed-result-abi-smoke.added.md  module-coverage.added.md  module-stanzas.added.md  mrccdata-stanza.added.md  nwpw-allow-translation.added.md  nwpw-apc.added.md  nwpw-atom-efield.added.md  nwpw-auxiliary-potentials.added.md  nwpw-bo-controls.added.md  nwpw-bo-fake-mass-default.fixed.md  nwpw-bo-step-default.fixed.md  nwpw-bo-time-step-default.fixed.md  nwpw-born.added.md  nwpw-brillouin-aliases.added.md  nwpw-cell-expand-default.fixed.md  nwpw-cell-mapping.added.md  nwpw-configured-control-rtdb-probe.added.md  (+99 more)
docs/orgmode/: changelog.org  index.org
docs/orgmode/contributing/: index.org
docs/orgmode/contributing/developer/: release.org  v2-plan.org
docs/orgmode/howto/: embedding.org
docs/orgmode/reference/: architecture.org  embed-config-model.org  nwchem-options.org
docs/orgmode/tutorials/: quickstart.org
docs/source/: Doxyfile_nwchemc.cfg  conf.py  doxyrest-config.lua
docs/source/_static/: custom.css
docs/source/_templates/partials/: extra-head.html
include/: nwchemc.h  nwchemc_features.h
schema/: Potentials.capnp  Potentials.capnp.c++  Potentials.capnp.h  meson.build
schema/inventory/: nwchem_features.json  nwchem_support_status.json
scripts/: goal_typed_promotion_evidence.sh  release_assert.py  rgpot_release_gate.py
src/: nwchem_embed_c_api.f90  nwchem_embed_legacy.F  nwchem_rtdb_put_dbl.F  nwchem_rtdb_put_dbl_array.F  nwchem_rtdb_put_int.F  nwchem_rtdb_put_int_array.F  nwchem_rtdb_put_log_array.F  nwchemc.c  nwchemc_features.c  nwchemc_params.c  nwchemc_params.h  nwchemc_stub.c
subprojects/: potentials-schema.wrap
subprojects/c-capnproto/: meson.build
subprojects/c-capnproto/compiler/: capnpc-c.c  str.h
tests/: encode_capnp.py  force_input_h2_bohr_ev.capnp.txt  force_input_h2_box_ang.capnp.txt  force_input_h2_box_bohr.capnp.txt  force_input_h2_eq.capnp.txt  force_input_h2_ev.capnp.txt  force_input_h2_invalid_state.capnp.txt  force_input_h2_stretched.capnp.txt  force_input_si_box_ang.capnp.txt  force_input_si_box_bohr_ev.capnp.txt  force_input_step_a.capnp.txt  force_input_step_b.capnp.txt  force_input_step_changed_species.capnp.txt  force_input_step_ev.capnp.txt  force_input_step_state.capnp.txt  nwchem_configured_pseudopotential_rtdb_probe.F  nwchem_forceinput_cell_rtdb_probe.F  nwchem_geometry_basis_rtdb_probe.F  nwchem_nwpw_rtdb_probe.F  nwchem_params.capnp.txt.in  nwchem_params_basis_options.capnp.txt  nwchem_params_brillouin_dos_grid.capnp.txt  nwchem_params_brillouin_dos_grid_default.capnp.txt  nwchem_params_brillouin_monkhorst_default.capnp.txt  nwchem_params_brillouin_tetrahedron.capnp.txt  nwchem_params_ccsd_energy.capnp.txt  nwchem_params_compact_cells.capnp.txt  nwchem_params_config_options.capnp.txt  nwchem_params_direct_dft.capnp.txt  nwchem_params_h2_ccsd.capnp.txt  nwchem_params_h2_ccsd_t.capnp.txt  nwchem_params_h2_dft.capnp.txt  nwchem_params_h2_direct_mp2.capnp.txt  nwchem_params_h2_mcscf.capnp.txt  nwchem_params_h2_mp2.capnp.txt  nwchem_params_h2_rimp2.capnp.txt  nwchem_params_h2_scf.capnp.txt  nwchem_params_h2_selci.capnp.txt  nwchem_params_h2_sodft.capnp.txt  nwchem_params_h2_tce.capnp.txt  (+92 more)
tests/cmocka/: test_embed_config_cmocka.c  test_features_cmocka.c  test_params_render_cmocka.c
tests/integration/: task_matrix.json
tests/integration/nw/: h2_ccsd_energy.nw  h2_ccsd_forces.nw  h2_ccsd_t_energy.nw  h2_dft_energy.nw  h2_dft_forces.nw  h2_dft_property.nw  h2_direct_mp2_energy.nw  h2_direct_mp2_forces.nw  h2_mcscf_energy.nw  h2_mcscf_forces.nw  h2_mp2_energy.nw  h2_mp2_forces.nw  h2_rimp2_energy.nw  h2_rimp2_forces.nw  h2_scf_energy.nw  h2_scf_forces.nw  h2_scf_frequencies.nw  h2_scf_gradient.nw  h2_scf_hessian.nw  h2_scf_optimize.nw  h2_scf_property.nw  h2_selci_energy.nw  h2_selci_forces.nw  h2_sodft_energy.nw  h2_sodft_forces.nw  h2_tce_cc2_energy.nw  h2_tce_ccd_energy.nw  h2_tce_ccd_forces.nw  h2_tce_ccsdt_bt_energy.nw  h2_tce_ccsdt_iter_energy.nw  h2_tce_cisd_energy.nw  h2_tce_cisd_forces.nw  h2_tce_cisdt_energy.nw  h2_tce_cr_ccsdt_energy.nw  h2_tce_energy.nw  h2_tce_forces.nw  h2_tce_lambda_energy.nw  h2_tce_lccd_energy.nw  h2_tce_lccsd_energy.nw  h2_tce_mbpt2_energy.nw  (+7 more)
tools/: build_nwchem_support_map.py  capnpc_c_compile.py  check_feature_inventory.py  compare_nwchem_cli.py  gen_feature_inventory.py  nwchem_link_probe.c  nwchem_link_utility_libs.py  nwchem_root_probe.py  nwchemc_debug.c  nwchemc_debug.h  nwchemc_feature_driver.c  run_coverage.sh
tools/patches/: README-classic-ccsdt.md  moints_aux2_classic_ccsdt.patch  moints_trp_classic_ccsdt.patch
